--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,4 +7,49 @@
     android:layout_height="match_parent"
     tools:context=".ChatActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/idAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/idMenuChat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            app:menu="@menu/menu_chat"
+            app:title="WhatsApp"
+            app:titleTextColor="#25D366" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/baseline_search"
+            android:drawablePadding="18dp"
+            android:hint="@string/pergunte_meta_ai_ou_pesquise"
+            android:inputType="textPersonName"
+            android:layout_below="@id/idMenuChat"
+            android:padding="20sp" />
+
+
+    </RelativeLayout>
+
+
+
+
+<com.google.android.material.bottomnavigation.BottomNavigationView
+android:id="@+id/idBottomNav"
+android:layout_gravity="bottom"
+android:layout_height="wrap_content"
+android:layout_width="match_parent"
+app:labelVisibilityMode="labeled"
+app:menu="@menu/menu_bottom_chat" />
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
