--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -1,15 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/"
+    <item
+        android:id="@+id/mCamera"
+        android:icon="@drawable/baseline_camera_alt"
+        android:title="Camera"
+        app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/mAddPessoa"
+        android:icon="@drawable/baseline_person_add_alt"
+        android:title="Adicionar contato"
+        app:showAsAction="never" />
 
+    <item
+        android:id="@+id/mNovoGrupo"
+        android:icon="@drawable/baseline_group_add"
+        android:title="Novo grupo"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mNovaTransmissao"
+        android:title="Nova transmissão"
+        app:showAsAction="never" />
 
-
-
-
-
+    <item
+        android:id="@+id/mDispositivosConectados"
+        android:title="Dispositivos conectados"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mMensagensFavoritas"
+        android:title="Mensagens Favoritas"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mEncontrarEmpresas"
+        android:title="Encontrar empresas"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mPagamentos"
+        android:title="Pagamentos"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mConfiguracoes"
+        android:title="Configurações"
+        app:showAsAction="never" />
 
 
 </menu>
